# Cpp-app

./: README.md  buildspec.yml  dockerfile
app/: CMakeLists.txt  main.cpp
